2007-09-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* daemon/gvfsbackendftp.c: (do_replace), (do_query_info),
	(do_query_fs_info), (do_enumerate):
	Update signatures for API changes in gio.

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsdaemondbus.c:
	Clear VfsConnectionData on creation
	(fixes read of uninitialized data on thread shutdown)
	
        * daemon/sftp.mount.in:
	Correct the type to "sftp"

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * daemon/mount.c:
	Return NOT_SUPPORTED error for unsupported uri types

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Update for G_IO_ERROR_NOT_MOUNTABLE_FILE name change

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * common/gmountoperationdbus.[ch]:
        * common/gmounttracker.[ch]:
	Pass in DBusConnection to use instead of using default one
	
        * client/gdaemonfile.c:
        * client/gdaemonvfs.[ch]:
        * client/gvfsdaemondbus.c:
	Use private dbus connection even for async calls, since the
	mainloop integration is conflicting with dbus-glib.
	This is a temporary measure until this is solved in a better way.
	
        * client/gdaemonvolumemonitor.c:
        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendsmbbrowse.c:
	Update to the API changes

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/gdaemonvfs.c: (g_daemon_vfs_finalize):
	Don't unref wrapped_vfs as it's just a pointer to the single instance
	return value of g_vfs_get_local().

2007-09-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/gdaemonfile.c: (g_daemon_file_resolve_relative_path),
	(g_daemon_file_file_iface_init):
	* test/benchmark-gvfs-big-files.c: (create_file):
	* test/benchmark-gvfs-small-files.c: (create_file):
	Update for API change in GIO. g_file_resolve_relative was renamed
	to g_file_resolve_relative_path.
