@@ -1,11 +1,0 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
-
-Name: GIO
-Description: GNOME virtual I/O
-Version: @VERSION@
-Requires: gobject-2.0,gmodule-no-export-2.0
-Libs: -L${libdir} -lgio
-Cflags: -I${includedir}/
